--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "node deploy.cjs"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
