--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "node deploy.cjs"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
     "vue": "^3.5.17",
     "vue-router": "4"
   },
